--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 table {
     border-collapse: collapse;
     margin: 15px 0;
@@ -6,4 +11,8 @@ table {
 td, th {
     border: 1px solid black;
     padding: 5px 10px;
+}
+.container {
+    height: 100%;
+    width: 100%;
 }
