--- a/style.css
+++ b/style.css
@@ -3,16 +3,19 @@
     padding: 0;
 }
 
-table {
-    border-collapse: collapse;
-    margin: 15px 0;
+body {
+    height: 100vh;
 }
 
-td, th {
-    border: 1px solid black;
-    padding: 5px 10px;
-}
-.container {
+.container-fluid {
     height: 100%;
     width: 100%;
+}
+
+.content-row {
+    height: 100%;
+}
+
+.list-row {
+    height: calc(12.5% - .7em);
 }
